[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/ui/startPage.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui/assets/mainPage.jpg" type="Texture" id=3]
[ext_resource path="res://assets/images/firstPage/assets1280x720.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/assets/uiAssets.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/SHOWG.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Acme-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/ui/errorMsg.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.8, 0.686275, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.203922, 0.180392, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0235294, 0.0235294, 0.0235294, 0.145098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("infoContainer/infoPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, -360 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("infoContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.378929, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 770 ), Vector2( 0, 720 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "playBtn"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "setPlay"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="startPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
errMsg = ExtResource( 8 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="btnContainer" type="Node2D" parent="."]

[node name="level1" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 548.364
margin_top = 485.546
margin_right = 738.364
margin_bottom = 643.546
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 623.546
margin_top = 265.455
margin_right = 763.546
margin_bottom = 413.455
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 415.273
margin_top = 164.818
margin_right = 602.273
margin_bottom = 352.818
__meta__ = {
"_edit_use_anchors_": false
}

[node name="huntingZone" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 916.818
margin_top = 212.954
margin_right = 1136.82
margin_bottom = 433.954
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 159.818
margin_top = 414.137
margin_right = 378.818
margin_bottom = 589.137
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playSprite" type="Sprite" parent="btnContainer"]
position = Vector2( 1087.98, 600.572 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 991, 250, 235, 134 )

[node name="playGo" type="Label" parent="btnContainer"]
margin_left = 1048.02
margin_top = 572.833
margin_right = 1135.02
margin_bottom = 633.833
custom_fonts/font = SubResource( 1 )
text = "go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 990.0
margin_top = 551.0
margin_right = 1197.0
margin_bottom = 656.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsSprite" type="Sprite" parent="btnContainer"]
position = Vector2( 172.789, 195.106 )
scale = Vector2( 1.14967, 1 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 992, 478, 250, 105 )

[node name="settings2" type="Label" parent="btnContainer"]
margin_left = 74.3753
margin_top = 174.929
margin_right = 260.375
margin_bottom = 235.929
custom_fonts/font = SubResource( 2 )
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 44.1272
margin_top = 152.564
margin_right = 277.127
margin_bottom = 237.564
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoSprite" type="Sprite" parent="btnContainer"]
position = Vector2( 103.589, 94.017 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 997, 383, 133, 97 )

[node name="infoText" type="Label" parent="btnContainer"]
margin_left = 86.6297
margin_top = 68.0208
margin_right = 272.63
margin_bottom = 129.021
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.8, 0, 0.470588, 1 )
text = "i"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Button" parent="btnContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 51.0
margin_top = 55.0
margin_right = 153.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLCont" type="Node2D" parent="."]

[node name="level1" type="Sprite" parent="HLCont"]
position = Vector2( 638.678, 568.932 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 277.689, 26.601, 253.603, 231.942 )

[node name="level2" type="Sprite" parent="HLCont"]
position = Vector2( 695.889, 350.623 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 530, 30, 220, 205 )

[node name="level3" type="Sprite" parent="HLCont"]
position = Vector2( 559.396, 261.866 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 380, 347, 358, 235 )

[node name="huntingZone" type="Sprite" parent="HLCont"]
position = Vector2( 1044.69, 320.958 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -2.4397, 300.648, 395.869, 310.165 )

[node name="lab" type="Sprite" parent="HLCont"]
position = Vector2( 267.163, 478.996 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 3.01355, 17.5683, 250.416, 281.44 )

[node name="level2blackOut" type="Sprite" parent="HLCont"]
position = Vector2( 701.305, 349.444 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 994.35, 47.2, 190, 170.05 )

[node name="level3blackOut" type="Sprite" parent="HLCont"]
position = Vector2( 513.602, 258.509 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 758, 32, 228, 227 )

[node name="coinInfo" type="Node2D" parent="."]

[node name="coinImg" type="Sprite" parent="coinInfo"]
position = Vector2( 1072.18, 51.9137 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 997, 576, 95, 96 )

[node name="coinCount" type="Label" parent="coinInfo"]
margin_left = 1118.79
margin_top = 30.7244
margin_right = 1208.79
margin_bottom = 94.7244
custom_fonts/font = SubResource( 4 )
text = "x 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="HBoxContainer" parent="Control"]
visible = false
margin_left = 299.716
margin_top = 598.284
margin_right = 1011.72
margin_bottom = 647.284
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Loading"]
margin_right = 126.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "loading..."
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/Loading"]
margin_left = 130.0
margin_right = 712.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = SubResource( 8 )

[node name="Timer" type="Timer" parent="Control/Loading"]

[node name="infoContainer" type="Node2D" parent="."]

[node name="infoPanel" type="Sprite" parent="infoContainer"]
modulate = Color( 0.337255, 0.788235, 0.92549, 1 )
position = Vector2( 640, -360 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 839, 441 )

[node name="Label" type="Label" parent="infoContainer"]
margin_left = 222.0
margin_top = -572.0
margin_right = 1056.0
margin_bottom = -155.0
custom_fonts/font = SubResource( 9 )
text = "Hello World"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeInfo" type="Button" parent="infoContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 963.0
margin_top = -551.0
margin_right = 1033.0
margin_bottom = -485.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="infoContainer"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 995.895, -519.137 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 844.911, 7.0962, 56.5215, 57.9114 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/infoPanel = SubResource( 10 )
anims/playBtn = SubResource( 11 )
anims/setPlay = SubResource( 12 )

[connection signal="button_down" from="btnContainer/level1" to="." method="_on_level1_button_down"]
[connection signal="button_down" from="btnContainer/level2" to="." method="_on_level2_button_down"]
[connection signal="button_down" from="btnContainer/level3" to="." method="_on_level3_button_down"]
[connection signal="button_down" from="btnContainer/huntingZone" to="." method="_on_huntingZone_button_down"]
[connection signal="button_down" from="btnContainer/lab" to="." method="_on_lab_button_down"]
[connection signal="button_down" from="btnContainer/play" to="." method="_on_play_button_down"]
[connection signal="button_up" from="btnContainer/settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="btnContainer/info" to="." method="_on_info_button_up"]
[connection signal="timeout" from="Control/Loading/Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="infoContainer/closeInfo" to="." method="_on_closeInfo_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
